# speculative-action

./: .gitignore  README.md
chess-game/: README.md  confidence-prediction.py  config.yml  guess_analysis.py  plot.py  pyproject.toml  requirements.txt  utils.py
chess-game/regular_workflow/: guess_over_regular_traj.py  regular_chess.py
chess-game/speculative_workflow/: Speculative_Chess.py  guess_over_spec_traj.py
chess-game/textarena/agents/: __init__.py  basic_agents.py
chess-game/textarena/envs/: __init__.py
chess-game/textarena/wrappers/: __init__.py
chess-game/textarena/wrappers/ActionWrappers/: __init__.py  action_formatting_wrapper.py
chess-game/trajectories/sample_trajectories/32831f2d-0059-40e7-84b8-f713e64bd519/: log.txt  steps_info_gpt_5_2025_08_07_confidence_prediction.json  steps_info_gpt_5_2025_08_07_guess_1.json  steps_info_gpt_5_2025_08_07_guess_2.json  steps_info_gpt_5_2025_08_07_guess_3.json  stepsinfo.json  time_checker_regular.json  time_checker_speculate.json
chess-game/trajectories/sample_trajectories/4c277d18-8f34-4a87-9c57-ec0b2472ad25/: game_info.json  log.txt  steps_info_gpt_5_2025_08_07_confidence_prediction.json  steps_info_gpt_5_2025_08_07_guess_1.json  steps_info_gpt_5_2025_08_07_guess_2.json  steps_info_gpt_5_2025_08_07_guess_3.json  stepsinfo.json  time_checker_speculate.json
chess-game/trajectories/sample_trajectories/53456583-5891-4a11-b71e-a0692194a35e/: log.txt  steps_info_gpt_5_2025_08_07_confidence_prediction.json  steps_info_gpt_5_2025_08_07_guess_1.json  steps_info_gpt_5_2025_08_07_guess_2.json  stepsinfo.json  (+3 more)
(+345 files in other folders)
